Source/WebCore: Implement NSProcessInfo::systemUptime on Mac Leopard. https://bugs.webkit.org/show_bug.cgi?id=66577

Reviewed by Tony Chang.

* WebCore.gyp/WebCore.gyp:
* platform/chromium/ScrollAnimatorChromiumMac.mm:
(-[NSProcessInfo systemUptime]):

LayoutTests: Enable touch tests on Mac Leopard.
https://bugs.webkit.org/show_bug.cgi?id=66577

Reviewed by Tony Chang.

* platform/chromium/test_expectations.txt:


git-svn-id: svn://svn.chromium.org/blink/trunk@97831 bbb929c8-8fbe-4397-9dbb-9b2b20218538