third_party/WebKit/Source/WebCore/platform/chromium/ScrollAnimatorChromiumMac.mm
@@ -26,6 +26,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "config.h"
 
+#include <sys/time.h>
+#include <sys/sysctl.h>
+
 #include "ScrollAnimatorChromiumMac.h"
 
 #include "FloatPoint.h"
@@ -47,8 +50,30 @@ using namespace std;
 @protocol NSAnimationDelegate
 @end
 
-@interface NSProcessInfo (NSObject)
+@interface NSProcessInfo (ScrollAnimatorChromiumMacExt)
 - (NSTimeInterval)systemUptime;
+@end
+
+@implementation NSProcessInfo (ScrollAnimatorChromiumMacExt)
+- (NSTimeInterval)systemUptime
+{
+    // Get how long system has been up. Found by looking getting "boottime" from the kernel.
+    static struct timeval boottime = {0};
+    if (!boottime.tv_sec) {
+        int mib[2] = {CTL_KERN, KERN_BOOTTIME};
+        size_t size = sizeof(boottime);
+        if (-1 == sysctl(mib, 2, &boottime, &size, 0, 0))
+            boottime.tv_sec = 0;
+    }
+    struct timeval now;
+    if (boottime.tv_sec && -1 != gettimeofday(&now, 0)) {
+        struct timeval uptime;
+        timersub(&now, &boottime, &uptime);
+        NSTimeInterval result = uptime.tv_sec + (uptime.tv_usec / 1E+6);
+        return result;
+    }
+    return 0;
+}
 @end
 #endif
 
