third_party/WebKit/Source/WebCore/WebCore.gyp/WebCore.gyp
@@ -1251,7 +1251,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
                   'class_whitelist_regex':
                       'ChromiumWebCoreObjC|TCMVisibleView|RTCMFlippedView',
                   'category_whitelist_regex':
-                      'TCMInterposing',
+                      'TCMInterposing|ScrollAnimatorChromiumMacExt',
                 },
                 'action': [
                   'mac/check_objc_rename.sh',
